# typica

./: .gitignore  CHANGELOG.md  pyproject.toml  requirements.txt
multidb_models/: __init__.py  base_meta.py  connection_meta.py  parameter_schemas.py  response.py
multidb_models/utils/: enums.py
tests/: test_base_mate.py
typica/: __init__.py  base.py  connection.py  metadata.py  parameter.py  response.py
typica/utils/: __init__.py  enums.py  query.py
