[tool.poetry]
name = "module-typica"
version = "0.1.7b"
description = ""
authors = ["Oktapian <oktapian@jkt1.ebdesk.com>"]
readme = "README.md"
packages = [{include = "typica"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.3.0"
pytz = "^2023.3.post1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
