[tool.poetry]
name = "module-typica"
version = "0.1.11"
description = "Standard Pydantic usages & utilities"
authors = ["Oktapian <oktapian@jkt1.ebdesk.com>"]
readme = "Readme.md"
packages = [{include = "typica"}]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.7.2"
pytz = "^2024.1"
deprecated = "^1.2.14"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
# pytest = "^7.4.2"
# mkdocs-material = "^9.5.24"
pytest = "^8.2.1"
mkdocs-material = "^9.5.25"
faker = "^25.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
