[tool.poetry]
name = "module-typica"
version = "0.1.13"
description = "Standard Pydantic usages & utilities"
authors = ["Oktapian <oktapian@jkt1.ebdesk.com>"]
readme = "Readme.md"
packages = [{include = "typica"}]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^2.7.2"
deprecated = "^1.2.14"
loguru = "^0.7.2"
pytz = "^2024.1"

[tool.poetry.group.dev.dependencies]
pymongo = "^4.7.2"
faker = "^25.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
